feat: implement JWT authentication, role support and file metadata tracking